Cleaned the user interface for the sign up page

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,14 +41,14 @@
 
             <EditText
                 android:id="@+id/editTextEmail"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="44dp"
-                android:layout_alignLeft="@+id/testArr"
-                android:layout_alignStart="@+id/testArr"
-                android:layout_below="@+id/editTextPass"
-                android:layout_marginLeft="52dp"
-                android:layout_marginStart="52dp"
-                android:layout_marginTop="90dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="28dp"
+                android:layout_marginRight="28dp"
+                android:layout_below="@+id/testArr"
+                android:layout_marginTop="65dp"
                 android:ems="10"
                 android:hint="E-Mail"
                 android:inputType="textEmailAddress"
@@ -59,14 +59,15 @@
 
             <EditText
                 android:id="@+id/editTextPass"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/nameTextView"
-                android:layout_alignLeft="@+id/nameTextView"
-                android:layout_alignStart="@+id/nameTextView"
-                android:layout_marginBottom="19dp"
+                android:layout_below="@+id/nameTextView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="31dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginRight="28dp"
                 android:ems="10"
-                android:hint="password"
+                android:hint="Password"
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
@@ -75,11 +76,14 @@
 
             <Button
                 android:id="@+id/signUpBtn"
-                android:layout_width="84dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/editTextEmail"
+                android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="27dp"
+                android:layout_marginBottom="56dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginRight="28dp"
+                android:background="#4863A0"
                 android:text="Sign Up"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,11 +91,14 @@
 
             <EditText
                 android:id="@+id/nameTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/editTextEmail"
-                android:layout_alignStart="@+id/editTextEmail"
-                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/editTextEmail"
+                android:layout_marginTop="29dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginRight="28dp"
                 android:ems="10"
                 android:hint="Name"
                 android:inputType="textPersonName"
@@ -107,12 +114,13 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="46dp"
-                android:layout_marginStart="46dp"
-                android:layout_marginTop="14dp"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="18dp"
                 android:text="Button"
                 tools:layout_editor_absoluteX="24dp"
                 tools:layout_editor_absoluteY="287dp" />
+
         </RelativeLayout>
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
