--- a/app/src/main/res/layout/fragment_preview_set.xml
+++ b/app/src/main/res/layout/fragment_preview_set.xml
@@ -45,11 +45,21 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cards"
+                android:text="Cards: "
                 android:textSize="20dp"
                 android:textColor="@color/black"
                 android:layout_alignParentBottom="true"
                 android:id="@+id/textView8" />
+
+            <TextView
+                android:id="@+id/tagsTextView"
+                android:textSize="15dp"
+                android:layout_alignParentBottom="true"
+                android:layout_toRightOf="@+id/textView8"
+                android:text="Tags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/cardsBtn"
                 android:elevation="5dp"
