--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="top_blue">#313DA3</color>
     <color name="red">#FF0000</color>
     <color name="green">#009900</color>
+    <color name="dark_grey">#efefef</color>
 
 </resources>
