--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,69 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.along002.testingfinal.Search.SearchActivity">
+    tools:context="com.example.along002.testingfinal.Home.HomeActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <!-- top toolbar -->
         <RelativeLayout
+            android:orientation="horizontal"
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/rellayout1"
-            android:layout_alignParentTop="true"
             android:background="@color/top_blue">
-            <EditText
-                android:id="@+id/searchEditText"
-                android:layout_width="270dp"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/backArrow"
-                android:textColor="@color/white"/>
-            <ImageView
-                android:id="@+id/imageViewSearch"
+
+            <RelativeLayout
+                android:background="@drawable/rounded_edittext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/searchEditText"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_white_search"/>
-            <ImageView
-                android:id="@+id/backArrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="18dp"
-                android:layout_marginStart="18dp"
-                android:src="@drawable/ic_back_arrow" />
+                android:layout_centerInParent="true">
 
+                <ImageView
+                    android:id="@+id/searchImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_search"/>
 
+                <EditText
+                    android:id="@+id/searchEditText"
+                    android:singleLine="true"
+                    android:layout_toRightOf="@+id/searchImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Search"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
+        <!-- middle section -->
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/relsearchlayout"
-            android:layout_below="@id/rellayout1">
-
-        </RelativeLayout>
-        <RelativeLayout
+            android:background="@color/dark_grey"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/relsearchlayout">
+            android:id="@+id/rellayout2"
+            android:layout_below="@+id/rellayout1"
+            android:layout_above="@+id/botNavBar">
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/searchFlashcardList">
 
-            </ListView>
-
+            <include layout = "@layout/layout_center_viewpager"/>
         </RelativeLayout>
+
+
+        <!-- bottom navigation -->
+        <include layout = "@layout/layout_bottom_navigation_view"/>
 
     </RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
