--- a/app/src/main/res/layout/layout_make_aset.xml
+++ b/app/src/main/res/layout/layout_make_aset.xml
@@ -48,6 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <EditText
+                    android:singleLine="true"
                     android:id="@+id/termEditText"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
@@ -55,6 +56,7 @@
                     android:textSize="18sp"/>
 
                 <EditText
+                    android:singleLine="true"
                     android:id="@+id/defEditText"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
