--- a/app/src/main/res/layout/fragment_set_list.xml
+++ b/app/src/main/res/layout/fragment_set_list.xml
@@ -4,16 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/setList">
-
-        </ListView>
-
-    </RelativeLayout>
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
