--- a/app/src/main/res/layout/fragment_preview_set.xml
+++ b/app/src/main/res/layout/fragment_preview_set.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/dark_grey">
 
         <RelativeLayout
             android:id="@+id/rellayout1"
