--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -6,14 +6,14 @@
         android:layout_alignParentTop="true">
 
         <android.support.design.widget.AppBarLayout
+            android:background="@color/top_blue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TabLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tabs"
-                android:background="@drawable/white_grey_border_bottom">
+                android:id="@+id/tabs">
 
             </android.support.design.widget.TabLayout>
 
