--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -1,4 +1,5 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,7 +14,9 @@
             <android.support.design.widget.TabLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tabs">
+                android:id="@+id/tabs"
+                app:tabSelectedTextColor="@color/white"
+                app:tabTextColor="@color/dark_grey">
 
             </android.support.design.widget.TabLayout>
 
