--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,20 +8,20 @@
     </item>
 
     <item
+        android:id="@+id/ic_make_a_set"
+        android:icon="@drawable/ic_make_a_set"
+        android:title="">
+    </item>
+
+    <item
+        android:id="@+id/ic_manage_set"
+        android:icon="@drawable/ic_manage_set"
+        android:title="">
+    </item>
+
+    <item
         android:id="@+id/ic_search"
         android:icon="@drawable/ic_search"
-        android:title="">
-    </item>
-
-    <item
-        android:id="@+id/ic_circle"
-        android:icon="@drawable/ic_circle"
-        android:title="">
-    </item>
-
-    <item
-        android:id="@+id/ic_profile"
-        android:icon="@drawable/ic_profile"
         android:title="">
     </item>
 
