--- a/app/src/main/res/layout/activity_card_flip_preview.xml
+++ b/app/src/main/res/layout/activity_card_flip_preview.xml
@@ -8,21 +8,32 @@
     android:background="#efefef"
     tools:context="com.example.along002.testingfinal.CardGames.CardFlipPreviewActivity">
 
-    <RelativeLayout
-        android:id="@+id/rellayout1"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardlayout1"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:padding="10dp"
-        android:background="#FFF">
-        <ImageView
-            android:id="@+id/cancelImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_cancel"/>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="4dp">
+        <RelativeLayout
+            android:id="@+id/rellayout1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:padding="10dp"
+            android:background="#FFF">
+            <ImageView
+                android:id="@+id/cancelImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_cancel"/>
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
 
     <RelativeLayout
-        android:layout_below="@+id/rellayout1"
+        android:layout_below="@+id/cardlayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
