--- a/app/src/main/res/layout/activity_speed_round.xml
+++ b/app/src/main/res/layout/activity_speed_round.xml
@@ -7,30 +7,42 @@
     android:layout_height="match_parent"
     tools:context="com.example.along002.testingfinal.CardGames.SpeedRoundActivity">
 
-    <RelativeLayout
-        android:id="@+id/rellayout1"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardlayout1"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:padding="10dp"
-        android:background="#FFF">
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="4dp">
+        <RelativeLayout
+            android:id="@+id/rellayout1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:padding="10dp"
+            android:background="#FFF">
 
-        <ImageView
-            android:id="@+id/cancelImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_cancel"/>
-        <TextView
-            android:id="@+id/timerTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="Timer"/>
+            <ImageView
+                android:id="@+id/cancelImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_cancel"/>
+            <TextView
+                android:textSize="20dp"
+                android:id="@+id/timerTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="Timer"/>
 
-    </RelativeLayout>
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
 
     <RelativeLayout
         android:padding="15dp"
-        android:layout_below="@+id/rellayout1"
+        android:layout_below="@+id/cardlayout1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -44,12 +56,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <android.support.v7.widget.CardView
+                    app:contentPadding="10dp"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <TextView
+                            android:textSize="20dp"
                             android:id="@+id/cardNumTextView1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -60,7 +76,8 @@
                             android:layout_centerInParent="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Back card"/>
+                            android:text="Back card"
+                            android:textSize="20dp"/>
 
                         <EditText
                             android:id="@+id/inputEditText1"
@@ -87,6 +104,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <android.support.v7.widget.CardView
+                    app:contentPadding="10dp"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <RelativeLayout
@@ -97,13 +117,15 @@
                             android:id="@+id/cardNumTextView2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="cardNum"/>
+                            android:text="cardNum"
+                            android:textSize="20dp"/>
                         <TextView
                             android:id="@+id/testTextView2"
                             android:layout_centerInParent="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Front Card"/>
+                            android:text="Front Card"
+                            android:textSize="20dp"/>
 
                         <EditText
                             android:id="@+id/inputEditText2"
