--- a/app/src/main/res/layout/layout_card_flip_preview.xml
+++ b/app/src/main/res/layout/layout_card_flip_preview.xml
@@ -23,7 +23,9 @@
             android:layout_height="match_parent">
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="match_parent"
+                app:cardUseCompatPadding="true"
+                app:cardElevation="4dp">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -44,7 +46,9 @@
             android:layout_height="match_parent">
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:cardUseCompatPadding="true"
+                app:cardElevation="4dp">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
