--- a/app/src/main/res/layout/fragment_preview_set.xml
+++ b/app/src/main/res/layout/fragment_preview_set.xml
@@ -13,6 +13,15 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:padding="10dp">
+
+            <ImageButton
+                android:id="@+id/favoriteBtn"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/star"
+                android:background="#00ffffff"
+                android:onClick="onToggleStar"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
