--- a/app/src/main/res/layout/fragment_search_preview.xml
+++ b/app/src/main/res/layout/fragment_search_preview.xml
@@ -13,6 +13,14 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:padding="10dp">
+            <ImageButton
+                android:id="@+id/favoriteBtn"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/star"
+                android:background="#00ffffff"
+                android:onClick="onToggleStar"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -85,6 +93,7 @@
                 android:text="Speed Round"
                 android:id="@+id/speedRoundBtn" />
             <Button
+                android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/matchBtn"
                 android:background="@drawable/black_border_card_view"
