--- a/app/src/main/res/layout/fragment_preview_set.xml
+++ b/app/src/main/res/layout/fragment_preview_set.xml
@@ -17,8 +17,8 @@
             <ImageButton
                 android:id="@+id/favoriteBtn"
                 android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/star"
                 android:background="#00ffffff"
                 android:onClick="onToggleStar"/>
