--- a/app/src/main/res/layout/layout_set_preview.xml
+++ b/app/src/main/res/layout/layout_set_preview.xml
@@ -56,7 +56,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_weight="89"
+                android:layout_weight="80"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingHorizontal="15dp"
@@ -74,6 +74,22 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:text="Tags"/>
+
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:paddingVertical="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <ImageButton
+                    android:id="@+id/favoriteView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#00ffffff"
+                    android:src="@drawable/star_set_display"/>
 
             </RelativeLayout>
 
