Redid the Login and Sign Up page.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,120 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.along002.testingfinal.LoginAndSignUp.LoginActivity">
+    tools:context="com.example.along002.testingfinal.LoginAndSignUp.LoginCreateAccountActivity">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:id="@+id/rellayout1"
-            android:background="@color/top_blue">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:textColor="@color/white"
-                android:layout_centerInParent="true"
-                android:textSize="36dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
+        <ViewSwitcher
+            android:id="@+id/viewSwitcher"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/rellayout1">
+            android:inAnimation="@anim/fade_in"
+            android:outAnimation="@anim/fade_out">
 
-            <EditText
-                android:id="@+id/emailTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/TextViewSignUp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="18dp"
-                android:ems="10"
-                android:hint="E-Mail"
-                android:inputType="textEmailAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:tint="#2F000000"
+                android:id="@+id/firstImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image5"/>
+            <ImageView
+                android:tint="#2F000000"
+                android:id="@+id/secondImageView"
+                android:scaleType="centerCrop"
+                android:src="@drawable/image6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-            <EditText
-                android:id="@+id/passwordTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/emailTxt"
-                android:layout_marginTop="21dp"
-                android:layout_toLeftOf="@+id/testingBtn"
-                android:layout_toStartOf="@+id/testingBtn"
-                android:ems="10"
-                android:hint="password"
-                android:inputType="textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
+        </ViewSwitcher>
 
-            <TextView
-                android:id="@+id/TextViewSignUp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="56dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:text="Sign Up"
-                android:textSize="30sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+        <include layout = "@layout/layout_center_viewpager"/>
 
-            <Button
-                android:id="@+id/loginBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/logoutBtn"
-                android:layout_alignStart="@+id/logoutBtn"
-                android:layout_centerVertical="true"
-                android:text="Login"
-                app:layout_constraintBottom_toTopOf="@+id/TextViewSignUp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
-                app:layout_constraintVertical_bias="0.174" />
-
-            <Button
-                android:id="@+id/logoutBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/passwordTxt"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="84dp"
-                android:text="Log Out"
-                app:layout_constraintBottom_toTopOf="@+id/TextViewSignUp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
-
-            <Button
-                android:id="@+id/testingBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/TextViewSignUp"
-                android:layout_alignBottom="@+id/TextViewSignUp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:text="Test"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp" />
-        </RelativeLayout>
 
     </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout>
+
+</RelativeLayout>
