--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -27,8 +27,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="Settings"
                 android:textSize="30sp"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
         </RelativeLayout>
 
         <RelativeLayout
