--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,12 @@
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#bfbfbf</color>
     <color name="white">#fff</color>
+    <color name="transparent_white">#99ffffff</color>
     <color name="black">#000000</color>
+    <color name="transparent_black">#99000000</color>
+    <color name="transparent_green">#9900e600</color>
     <color name="dark_blue">#4257B4</color>
+    <color name="transparent_dark_blue">#990066cc</color>
     <color name="top_blue">#313DA3</color>
     <color name="red">#FF0000</color>
     <color name="green">#009900</color>
