--- a/app/src/main/res/layout/fragment_preview_set.xml
+++ b/app/src/main/res/layout/fragment_preview_set.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/dark_grey">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:id="@+id/rellayout1"
@@ -17,8 +17,8 @@
             <ImageButton
                 android:id="@+id/favoriteBtn"
                 android:layout_alignParentRight="true"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/star"
                 android:background="#00ffffff"
                 android:onClick="onToggleStar"/>
@@ -70,60 +70,115 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <Button
-                android:id="@+id/cardsBtn"
-                android:elevation="5dp"
-                android:translationZ="5dp"
-                android:stateListAnimator="@null"
-                android:background="@drawable/black_border_card_view"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cards"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft = "80dp"/>
-            <Button
-                android:elevation="5dp"
-                android:translationZ="5dp"
-                android:stateListAnimator="@null"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/cardsBtn"
-                android:background="@drawable/black_border_card_view"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:text="Speed Round"
-                android:id="@+id/speedRoundBtn" />
+                android:id="@+id/relativeLayout">
+                <android.support.v7.widget.CardView
+                    android:layout_toLeftOf="@+id/speedRoundCard"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-            <Button
-                android:elevation="5dp"
-                android:translationZ="5dp"
-                android:stateListAnimator="@null"
-                android:id="@+id/deleteSetBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/editSetBtn"
-                android:layout_alignBottom="@+id/editSetBtn"
-                android:layout_alignEnd="@+id/speedRoundBtn"
-                android:layout_alignRight="@+id/speedRoundBtn"
-                android:background="@drawable/black_border_card_view"
-                android:text="Delete Set"
-                android:textColor="@color/red" />
+                    <Button
+                        android:id="@+id/cardsBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cards"
+                        android:background="#00ffffff" />
+                </android.support.v7.widget.CardView>
 
-            <Button
-                android:elevation="5dp"
-                android:translationZ="5dp"
-                android:stateListAnimator="@null"
-                android:id="@+id/editSetBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/textView8"
-                android:layout_alignLeft="@+id/author"
-                android:layout_alignStart="@+id/author"
-                android:background="@drawable/black_border_card_view"
-                android:text="Edit Set"
-                android:textColor="@color/green" />
+                <android.support.v7.widget.CardView
+                    android:id="@+id/speedRoundCard"
+                    android:layout_centerInParent="true"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00ffffff"
+                        android:text="Speed&#10;Round"
+                        android:id="@+id/speedRoundBtn" />
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_toRightOf="@+id/speedRoundCard"
+                    android:layout_centerInParent="true"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00ffffff"
+                        android:text="MATCH"
+                        android:id="@+id/matchBtn" />
+
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_below="@+id/relativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:id="@+id/rellayoutMid"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.CardView
+                    android:layout_toLeftOf="@+id/rellayoutMid"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:background="#00ffffff"
+                        android:id="@+id/deleteSetBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Delete&#10;Set"
+                        android:textColor="@color/red" />
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_toRightOf="@+id/rellayoutMid"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/editSetBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00ffffff"
+                        android:text="Edit&#10;Set"
+                        android:textColor="@color/green" />
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
 
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_below="@+id/rellayout1"
             android:id="@+id/rellayout2"
