--- a/app/src/main/res/layout/fragment_search_preview.xml
+++ b/app/src/main/res/layout/fragment_search_preview.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
+    android:id="@+id/previewScrollView"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/dark_grey">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:id="@+id/rellayout1"
@@ -69,38 +70,64 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <Button
-                android:id="@+id/cardsBtn"
-                android:elevation="5dp"
-                android:translationZ="5dp"
-                android:stateListAnimator="@null"
-                android:background="@drawable/black_border_card_view"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cards"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft = "80dp"/>
-            <Button
-                android:elevation="5dp"
-                android:translationZ="5dp"
-                android:stateListAnimator="@null"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/cardsBtn"
-                android:background="@drawable/black_border_card_view"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:text="Speed Round"
-                android:id="@+id/speedRoundBtn" />
-            <Button
-                android:layout_marginTop="10dp"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/matchBtn"
-                android:background="@drawable/black_border_card_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/cardsBtn"
-                android:text="Match Prototype"/>
+                android:id="@+id/relativeLayout">
+                <android.support.v7.widget.CardView
+                    android:layout_toLeftOf="@+id/speedRoundCard"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/cardsBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cards"
+                        android:background="#00ffffff" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/speedRoundCard"
+                    android:layout_centerInParent="true"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00ffffff"
+                        android:text="Speed&#10;Round"
+                        android:id="@+id/speedRoundBtn" />
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:layout_toRightOf="@+id/speedRoundCard"
+                    android:layout_centerInParent="true"
+                    app:cardUseCompatPadding="true"
+                    app:cardElevation="4dp"
+                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00ffffff"
+                        android:text="MATCH"
+                        android:id="@+id/matchBtn" />
+
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
 
 
         </RelativeLayout>
